--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .import/
 export.cfg
 export_presets.cfg
+export/**/*
 
 # Imported translations (automatically generated from CSV files)
 *.translation
