--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+
+# Export results
 export/**/*
+index.*
 
 # Imported translations (automatically generated from CSV files)
 *.translation
