--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -47,5 +47,5 @@ jobs:
       id: upload_win_artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ steps.tag_version.outputs.TAG_VERSION }}-win
-        path: ${{ steps.export.outputs.archive_directory }}/win.zip
+        name: ${{ steps.tag_version.outputs.TAG_VERSION }}-Windows
+        path: ${{ steps.export.outputs.archive_directory }}/Windows.zip
