--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,12 +1,12 @@
 [preset.0]
 
-name="Windows Desktop"
+name="Windows"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="docs/*,export/*,.git/*"
 exclude_filter=""
 export_path="export/windows/eso_comic.exe"
 encryption_include_filters=""
