--- a/.github/workflows/mainline.yml
+++ b/.github/workflows/mainline.yml
@@ -38,7 +38,7 @@ jobs:
         godot_executable_download_url: https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_linux.x86_64.zip
         godot_export_templates_download_url: https://github.com/godotengine/godot/releases/download/4.1.1-stable/Godot_v4.1.1-stable_export_templates.tpz
         relative_project_path: ./
-        archive_output: true
+        archive_output: false
 
     - name: list export
       id: list_export
